#4360 - Clean up code
- Use more modern Java constructs